[gd_scene load_steps=4 format=3 uid="uid://nnsqkniyrq8k"]

[ext_resource type="Script" path="res://addons/anima/ui/EventItem.gd" id="1_45vxs"]
[ext_resource type="Texture2D" uid="uid://dkqfrypvtspad" path="res://addons/anima/icons/Play.svg" id="2_nfl0c"]
[ext_resource type="Texture2D" uid="uid://omrilwyfeps" path="res://addons/anima/icons/Collapse.svg" id="5_tyu00"]

[node name="EventItem" type="VBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_45vxs")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="OptionButton" type="OptionButton" parent="HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
item_count = 7
popup/item_0/text = "tree_entered"
popup/item_0/id = 0
popup/item_1/text = "tree_exiting"
popup/item_1/id = 1
popup/item_2/text = "ready"
popup/item_2/id = 2
popup/item_3/text = "focus_entered"
popup/item_3/id = 3
popup/item_4/text = "focus_exited"
popup/item_4/id = 4
popup/item_5/text = "mouse_entered"
popup/item_5/id = 5
popup/item_6/text = "mouse_exited"
popup/item_6/id = 6

[node name="SelectAnimationButton" type="Button" parent="HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Animation..."

[node name="PlayButton" type="Button" parent="HBoxContainer"]
layout_mode = 2
tooltip_text = "Preview animation"
icon = ExtResource("2_nfl0c")
icon_alignment = 1

[node name="SkipButton" type="Button" parent="HBoxContainer"]
layout_mode = 2

[node name="MoreButton" type="Button" parent="HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
toggle_mode = true
icon = ExtResource("5_tyu00")

[node name="Options" type="GridContainer" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 2
columns = 2

[node name="Label" type="Label" parent="Options"]
layout_mode = 2
size_flags_horizontal = 3
text = "Play method"

[node name="OptionButton" type="OptionButton" parent="Options"]
layout_mode = 2
size_flags_horizontal = 3
item_count = 2
selected = 0
popup/item_0/text = "Forward"
popup/item_0/id = 0
popup/item_1/text = "Backwards"
popup/item_1/id = 1

[node name="Label2" type="Label" parent="Options"]
layout_mode = 2
size_flags_horizontal = 3
text = "Delay (seconds):"

[node name="LineEdit" type="LineEdit" parent="Options"]
layout_mode = 2
text = "0"
alignment = 2

[node name="Label3" type="Label" parent="Options"]
layout_mode = 2
size_flags_horizontal = 3

[connection signal="item_selected" from="HBoxContainer/OptionButton" to="." method="_on_option_button_item_selected"]
[connection signal="pressed" from="HBoxContainer/SelectAnimationButton" to="." method="_on_select_animation_button_pressed"]
[connection signal="pressed" from="HBoxContainer/PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="HBoxContainer/MoreButton" to="." method="_on_more_button_pressed"]
